# nodepp-camera

./: .gitignore  CMakeLists.txt  README.md  compile.sh  main.cpp
include/camera/: camera.h
